--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
   "name": "sandbox",
   "version": "1.0.0",
-  "description": "",
+  "description": "sandbox for work with typescript",
   "main": "main.ts",
   "dependencies": {
-    "rollup-plugin-typescript": "^1.0.1",
     "rollup": "^2.36.2",
+    "rollup-plugin-typescript": "^1.0.1",
+    "rxjs": "^6.6.3",
     "tslib": "^2.1.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/node": "^14.14.27",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
-    "rollup-plugin-prettier": "^2.1.0"
+    "rollup-plugin-prettier": "^2.1.0",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "scripts": {
     "watch": "rollup -c -w",
     "start_server": "nodemon dist/bundle.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "sam_ega",
   "license": "ISC"
 }
