--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "lib": ["es2015"],
+    "lib": ["es2015", "DOM", "es6"],
     "module": "commonjs",
     "outDir": "dist",
     "sourceMap": true,
     "strict": true,
     "target": "es2015"
   },
-  "include": ["scr"]
+  "include": ["src"]
 }
