--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^14.14.27",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-prettier": "^2.1.0",
     "rollup-plugin-terser": "^7.0.2"
   },
